fix spotbugs